--- a/Security/Vanara.Security.csproj
+++ b/Security/Vanara.Security.csproj
@@ -17,9 +17,18 @@ AccountLogonRights, DesiredAccess, SystemPrivilege
 
 </PackageReleaseNotes>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
-    <Reference Include="System.DirectoryServices" />
-  </ItemGroup>
+  <Choose>
+    <When Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
+      <ItemGroup>
+        <Reference Include="System.DirectoryServices" />
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <ItemGroup>
+        <PackageReference Include="System.DirectoryServices" Version="5.0.0" />
+      </ItemGroup>
+    </Otherwise>
+  </Choose>
   <ItemGroup>
     <ProjectReference Include="..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\PInvoke\NTDSApi\Vanara.PInvoke.NTDSApi.csproj" />
