--- a/PInvoke/WTSApi32/Vanara.PInvoke.WTSApi32.csproj
+++ b/PInvoke/WTSApi32/Vanara.PInvoke.WTSApi32.csproj
@@ -10,7 +10,15 @@
     <AssemblyName>Vanara.PInvoke.WTSApi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;WTSApi32;Remote Desktop Services;windows;api</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+IsInteractiveUserSession, QueryActiveSession, QueryUserToken, RegisterUsertokenForNoWinlogon, WTSCloseServer, WTSConnectSession, WTSCreateListener, WTSDisconnectSession, WTSEnableChildSessions, WTSEnumerateListeners, WTSEnumerateProcesses, WTSEnumerateProcessesEx, WTSEnumerateServers, WTSEnumerateSessions, WTSEnumerateSessionsEx, WTSFreeMemory, WTSFreeMemoryEx, WTSGetChildSessionId, WTSGetListenerSecurity, WTSIsChildSessionsEnabled, WTSLogoffSession, WTSOpenServer, WTSOpenServerEx, WTSQueryListenerConfig, WTSQuerySessionInformation, WTSQueryUserConfig, WTSQueryUserToken, WTSRegisterSessionNotification, WTSRegisterSessionNotificationEx, WTSSendMessage, WTSSetListenerSecurity, WTSSetRenderHint, WTSSetSessionInformation, WTSSetUserConfig, WTSShutdownSystem, WTSStartRemoteControlSession, WTSStopRemoteControlSession, WTSTerminateProcess, WTSUnRegisterSessionNotification, WTSUnRegisterSessionNotificationEx, WTSVirtualChannelClose, WTSVirtualChannelOpen, WTSVirtualChannelOpenEx, WTSVirtualChannelPurgeInput, WTSVirtualChannelPurgeOutput, WTSVirtualChannelQuery, WTSVirtualChannelRead, WTSVirtualChannelWrite, WTSWaitSystemEvent
+
+Structures
+HVIRTUALCHANNEL, HWTSSERVER, WTS_CLIENT_ADDRESS, WTS_CLIENT_DISPLAY, WTS_PROCESS_INFO, WTS_PROCESS_INFO_EX, WTS_SERVER_INFO, WTS_SESSION_ADDRESS, WTS_SESSION_INFO, WTS_SESSION_INFO_1, WTSCLIENT, WTSCONFIGINFO, WTSINFO, WTSINFOEX, WTSINFOEX_LEVEL, WTSINFOEX_LEVEL1, WTSLISTENERCONFIG, WTSLISTENERNAME, WTSUSERCONFIG
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
