--- a/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
+++ b/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
@@ -24,6 +24,7 @@ OLEUIBUSY, OLEUICHANGEICON, OLEUICHANGESOURCE
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\ComDlg32\Vanara.PInvoke.ComDlg32.csproj" />
     <ProjectReference Include="..\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
+    <ProjectReference Include="..\Ole\Vanara.PInvoke.Ole.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
 </Project>
