--- a/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
+++ b/PInvoke/OleDlg/Vanara.PInvoke.OleDlg.csproj
@@ -16,7 +16,10 @@ Functions
 OleUIAddVerbMenu, OleUIBusy, OleUICanConvertOrActivateAs, OleUIChangeIcon, OleUIChangeSource, OleUIConvert, OleUIEditLinks, OleUIInsertObject, OleUIObjectProperties, OleUIPasteSpecial, OleUIPromptUser, OleUIUpdateLinks
 
 Structures
-OLEUIBUSY, OLEUICHANGEICON, OLEUICHANGESOURCE
+OLEUIBUSY, OLEUICHANGEICON, OLEUICHANGESOURCE, OLEUICONVERT, OLEUIEDITLINKS, OLEUIGNRLPROPS, OLEUIINSERTOBJECT, OLEUILINKPROPS, OLEUIOBJECTPROPS, OLEUIPASTEENTRY, OLEUIPASTESPECIAL, OLEUIVIEWPROPS
+
+Interfaces
+IOleUILinkContainer
 
 </PackageReleaseNotes>
   </PropertyGroup>
