--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -60,6 +60,7 @@
       <dependency id="Vanara.PInvoke.Security" version="3.3.1" />
       <dependency id="Vanara.PInvoke.SetupAPI" version="3.3.1" />
       <dependency id="Vanara.PInvoke.Shared" version="3.3.1" />
+      <dependency id="Vanara.PInvoke.SHCore" version="3.3.1" />
       <dependency id="Vanara.PInvoke.Shell32" version="3.3.1" />
       <dependency id="Vanara.PInvoke.ShlwApi" version="3.3.1" />
       <dependency id="Vanara.PInvoke.TaskSchd" version="3.3.1" />
@@ -74,6 +75,7 @@
       <dependency id="Vanara.PInvoke.WinTrust" version="3.3.1" />
       <dependency id="Vanara.PInvoke.WlanApi" version="3.3.1" />
       <dependency id="Vanara.PInvoke.Ws2_32" version="3.3.1" />
+      <dependency id="Vanara.PInvoke.WsmSvc" version="3.3.1" />
       <dependency id="Vanara.PInvoke.WTSApi32" version="3.3.1" />
       <dependency id="Vanara.Security" version="3.3.1" />
       <dependency id="Vanara.SystemServices" version="3.3.1" />
