--- a/PInvoke/IScsiDsc/Vanara.PInvoke.IScsiDsc.csproj
+++ b/PInvoke/IScsiDsc/Vanara.PInvoke.IScsiDsc.csproj
@@ -10,7 +10,15 @@
     <AssemblyName>Vanara.PInvoke.IScsiDsc</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;IScsiDsc;ISCSI;Discovery Library</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+AddIScsiConnection, AddIScsiSendTargetPortal, AddIScsiStaticTarget, AddISNSServer, AddPersistentIScsiDevice, AddRadiusServer, ClearPersistentIScsiDevices, DllMain, GetDevicesForIScsiSession, GetIScsiIKEInfo, GetIScsiInitiatorNodeName, GetIScsiSessionList, GetIScsiSessionListEx, GetIScsiTargetInformation, GetIScsiVersionInformation, LoginIScsiTarget, LogoutIScsiTarget, RefreshIScsiSendTargetPortal, RefreshISNSServer, RemoveIScsiConnection, RemoveIScsiPersistentTarget, RemoveIScsiSendTargetPortal, RemoveIScsiStaticTarget, RemoveISNSServer, RemovePersistentIScsiDevice, RemoveRadiusServer, ReportActiveIScsiTargetMappings, ReportIScsiInitiatorList, ReportIScsiPersistentLogins, ReportIScsiSendTargetPortals, ReportIScsiSendTargetPortalsEx, ReportIScsiTargetPortals, ReportIScsiTargets, ReportISNSServerList, ReportPersistentIScsiDevices, ReportRadiusServerList, SendScsiInquiry, SendScsiReadCapacity, SendScsiReportLuns, SetIScsiGroupPresharedKey, SetIScsiIKEInfo, SetIScsiInitiatorCHAPSharedSecret, SetIScsiInitiatorNodeName, SetIScsiInitiatorRADIUSSharedSecret, SetIScsiTunnelModeOuterAddress, SetupPersistentIScsiDevices, SetupPersistentIScsiVolumes
+
+Structures
+IKE_AUTHENTICATION_INFORMATION, IKE_AUTHENTICATION_PRESHARED_KEY, ISCSI_CONNECTION_INFO, ISCSI_DEVICE_ON_SESSION, ISCSI_LOGIN_OPTIONS, ISCSI_SESSION_INFO, ISCSI_TARGET_MAPPING, ISCSI_TARGET_PORTAL, ISCSI_TARGET_PORTAL_GROUP, ISCSI_TARGET_PORTAL_INFO_EX, ISCSI_UNIQUE_SESSION_ID, ISCSI_VERSION_INFO, PERSISTENT_ISCSI_LOGIN_INFO, SCSI_ADDRESS, SCSI_LUN_LIST, STORAGE_DEVICE_NUMBER
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
