--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -33,19 +33,13 @@ CorrespondingAction, StringListPackMethod
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or '$(TargetFramework)' == 'net40' ">
-    <PackageReference Include="Theraot.Core">
-      <Version>3.2.0</Version>
-    </PackageReference>
+    <PackageReference Include="Theraot.Core" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
-    <PackageReference Include="System.ValueTuple">
-      <Version>4.5.0</Version>
-    </PackageReference>
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' Or '$(TargetFramework)' == 'netcoreapp2.0' Or $(TargetFramework.StartsWith('netstandard')) ">
-    <PackageReference Include="System.Memory">
-      <Version>4.5.4</Version>
-    </PackageReference>
+    <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="InteropServices\SafeIDispatch.cs" />
