--- a/UnitTests/PInvoke/CoreAudio/CoreAudio.csproj
+++ b/UnitTests/PInvoke/CoreAudio/CoreAudio.csproj
@@ -65,12 +65,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NUnit">
-      <Version>3.12.0</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.15.1</Version>
-    </PackageReference>
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
