--- a/PInvoke/RstrtMgr/Vanara.PInvoke.RstrtMgr.csproj
+++ b/PInvoke/RstrtMgr/Vanara.PInvoke.RstrtMgr.csproj
@@ -10,7 +10,15 @@
     <AssemblyName>Vanara.PInvoke.RstrtMgr</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;RstrtMgr;restart manager</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+RmAddFilter, RmCancelCurrentTask, RmEndSession, RmGetFilterList, RmGetList, RmJoinSession, RmRegisterResources, RmRemoveFilter, RmRestart, RmShutdown, RmStartSession
+
+Structures
+RM_FILTER_INFO, RM_PROCESS_INFO, RM_UNIQUE_PROCESS
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
